[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemigos/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/16-Puff/Puff.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), null ],
"loop": false,
"name": "puff",
"speed": 15.0
}, {
"frames": [  ],
"loop": false,
"name": "espera",
"speed": 5.0
} ]

[node name="spawner_pigs" type="Position2D"]
position = Vector2( 67.0104, 28.295 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
min_time = 5
max_time = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 3
frames = SubResource( 10 )
animation = "espera"
frame = -1
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 6.8722, 15.4431 )
scale = Vector2( 7.3298, 1.90963 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
